--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,12 +18,12 @@ build:
 
 requirements:
   build:
-    - python
+    - python >=3.5
     - setuptools
     - pip
 
   run:
-    - python
+    - python >=3.5
     - docutils
     - jinja2
     - nbconvert
