--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . --no-deps -vv
 
@@ -25,7 +25,7 @@ requirements:
   run:
     - python >=3.6
     - docutils
-    - jinja2 >=2.11,<3
+    - jinja2
     - nbconvert
     - nbformat
     - sphinx
